style.css
/* ... */
body.dark-theme .links-mobile li{
    border-color: white;
}

.hamb input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: 25px;
  left: 14px;
  
  cursor: pointer;
  
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  
  -webkit-touch-callout: none;
}

.hamb span
{
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    margin-right: 1rem;
    background: #cdcdcd;
    border-radius: 3px;
    z-index: 1;
}

.menu-active {
    left: 0;
    opacity: 1;
}

@media screen and (max-width: 1200px) {
    section {
        height: auto;
        padding-top: 5rem;
    }

    #Projects .content {
        grid-template-columns: repeat(2, auto);
        gap: 20px;
    }

    .content-box {
        grid-template-rows: repeat(4, 3rem); 
    }
}

@media screen and (max-width: 950px) {
    section, .front{
        padding-left: 10%;
        padding-right: 10%;
        width: 80%;
    }
    
    nav {
        margin-left: 10%;
        width: 80%;
    }
    
    section .content {
        font-size: 1rem;
    }

    .sidenav {
        display: none;
    }
    
    .theme-scroll {
        display: none;
    }
    
    .title-scroll {
        display: none;
    }
 
    .content-box {
        grid-template-columns: repeat(3, auto);
        grid-template-rows: repeat(4, auto); 
        gap: 15px;
    }
}

@media screen and (max-width: 740px) {
    .content-box {
        grid-template-columns: repeat(2, auto);
        grid-template-rows: repeat(4, auto); 

    }
    
    #Projects .content {
        grid-template-columns: repeat(1, auto);
        grid-template-rows: repeat(4, auto); 
    }
    
    .project {
        width: 100%;
        height: auto;
    }
}

@media screen and (max-width: 500px) {
    .front {
        height: 100vh;
        padding: 3rem 5%;
        width: 90%;
        background: radial-gradient(circle farthest-corner at top left, #DDD 20%, #EEE 30%, #FFF 50%);
    }
    
    body.dark-theme .front {
        background: radial-gradient(circle farthest-corner at top left, #222 20%, #111 30%, #000 50%);
    }

    section {
        padding: 3rem 5%;
        width: 90%;
        align-items: center;
    }

    .content-box {
        grid-template-columns: repeat(2, auto);
        grid-template-rows: repeat(4, auto); 
    }

    .skill-button {
        padding: 0.1rem;
        width: 40vw;
    }

    .heading {
        align-self:flex-start;
    }

    .links {
        display: none;
    }

    nav {
        align-items: flex-start;
        justify-content: left;
        position: fixed;
        top: 0%;
        background-color: transparent;
        width: 100%;
        margin-left: 0;
        padding: 1rem;
        transition: all ease-in-out 500ms;
    }
    
    .mobile-nav {
        background-color: #EEE;
    }
    body.dark-theme .mobile-nav{
        background-color: #121212;
    }

    .title {
        display: none;
    }

    .hamb, .links-menu {
        display: block;
    }

    .hamb span {
        background: #999;
    }
}

